--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,1 +1,22 @@
+# Increase transmission strength.
+# https://zmk.dev/docs/troubleshooting/connection-issues#unreliableweak-connection
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Bluetooth
+# https://zmk.dev/docs/config/system#bluetooth
+CONFIG_BT_MAX_CONN=7
+CONFIG_BT_MAX_PAIRED=7
+
+# Debug
+# https://zmk.dev/docs/config/system#logging
 CONFIG_ZMK_USB_LOGGING=n
+
+# Battery
+# https://zmk.dev/docs/config/battery#peripheral-battery-monitoring
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+# Key Chatter
+# https://zmk.dev/docs/features/debouncing
+# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
+# CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
