--- a/config/os/shared/macros/layers.dtsi
+++ b/config/os/shared/macros/layers.dtsi
@@ -1,5 +1,3 @@
-// TODO: enable when OS import
-
-// TO_MACRO(m, BAS)    //to_mBAS
-// TO_MACRO(w, BAS)    //to_wBAS
-// TO_MACRO(a, BAS)    //to_aBAS
+TO_MACRO(m, BAS)    //to_mBAS
+TO_MACRO(w, BAS)    //to_wBAS
+TO_MACRO(a, BAS)    //to_aBAS
